<resources>
    <string name="app_name">AlloMashqal</string>
    <string name="forgot"><u>Forgot your password?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="eventsservice">Events Service</string>
    <string name="offers"> Offers</string>
    <string name="servicename">Service type:</string>
    <string name="cityname">City:</string>
    <string name="bookingservice">Booking Services</string>
    <string name="review">Review:</string>
    <string name="price">Price:</string>
    <string name="select">Select</string>
    <string name="selectdate">Select a date</string>
    <string name="selecttime">Select a time</string>
    <string name="myaccount">My Account</string>
    <string name="mesg">Chat</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="notications">Notifications</string>
    <string name="bookingstatus">Booking status:</string>
    <string name="offerdetail">Offers details:</string>
    <string name="bookingdate">Booking Date:</string>
    <string name="totalbill">Total bill:</string>
    <string name="orderdetails">Order details:</string>
    <string name="bookingdetail">Booking Details</string>
    <string name="title">Event Title</string>
    <string name="servicetype">Service type:</string>
    <string name="location">Location</string>
    <string name="bookingconfirmation">Booking Confirmation</string>
    <string name="reservation">Your reservation has been \n sent successfully</string>
    <string name="cancel">Cancel Bookings</string>
    <string name="canceltext">Cancel</string>
    <string name="salons">Salons</string>
    <string name="type">type</string>
    <string name="salonsname">Salons Name</string>
    <string name="eventname">Event Name</string>
    <string name="offertitle">Offer title</string>
    <string name="offerperiod">Offer period:</string>
    <string name="from">From:</string>
    <string name="booking">Booking</string>
    <string name="cancelbooking">Cancel Booking</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="signinvistor">Sign in as a visitor</string>
    <string name="mobileno">Mobile Number</string>
    <string name="maploc">Please select your location on the map</string>
    <string name="next">Next</string>
    <string name="homepage">Home Page</string>
    <string name="edit">Edit</string>
    <string name="saveedits">Save Edits</string>
    <string name="startchat">Start a chat</string>
    <string name="name">Name</string>
    <string name="reservationsent">The reservation has been sent</string>
    <string name="offerprice">Offer price</string>
    <string name="dateformat">DD/MM/YYYY</string>
    <string name="nointernet">No Internet</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="oldpassword">Old Password</string>
    <string name="confirmpassword">Confirm Password</string>
</resources>