<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_16dp"
    android:padding="@dimen/margin_16dp"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gold"
        android:layout_marginTop="@dimen/margin_16dp"
        android:hint="@string/password"
        android:gravity="start"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="@dimen/margin_16dp">

    </EditText>

    <EditText
        android:id="@+id/confirm_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gold"
        android:layout_marginTop="@dimen/margin_16dp"
        android:hint="@string/confirmpassword"
        android:gravity="start"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="@dimen/margin_16dp">

    </EditText>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:backgroundTint="@color/gold"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_16dp"
        android:textColor="@color/black"
        android:background="@drawable/roundbt_fill">

    </com.google.android.material.button.MaterialButton>
</LinearLayout>