<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:layout_margin="@dimen/margin_8dp"
    android:padding="@dimen/margin_16dp">


    <TextView
        android:id="@+id/eventname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventname"
        android:gravity="right"
        android:textColor="@color/gold"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_toRightOf="@id/serviceimage"
        android:textSize="@dimen/textsize_16sp">

    </TextView>

    <TextView
        android:id="@+id/servicename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicename"
        android:gravity="right"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_toRightOf="@id/serviceimage"
        android:layout_below="@id/eventname"
        android:layout_marginTop="@dimen/margin_32dp"
        android:textColor="@color/gold">

    </TextView>


    <TextView
        android:id="@+id/cityname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityname"
        android:gravity="right"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_toRightOf="@id/serviceimage"
        android:layout_below="@id/servicename"
        android:layout_marginTop="@dimen/margin_16dp"
        android:textColor="@color/gold">

    </TextView>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/serviceimage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentLeft="true"
        app:riv_border_color="@android:color/transparent"
        app:riv_corner_radius="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/main2">

    </com.makeramen.roundedimageview.RoundedImageView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_below="@id/serviceimage"
        android:layout_marginTop="@dimen/margin_16dp">

        <TextView
            android:id="@+id/reviewtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textColor="@color/gold">

        </TextView>

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:rating="3"
            android:backgroundTint="@color/gold"
            android:progressTint="@color/gold"
            style="@style/Widget.AppCompat.RatingBar.Small">

        </androidx.appcompat.widget.AppCompatRatingBar>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bookingservice"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_below="@id/serviceimage"
        android:background="@drawable/roundbt_fill"
        android:backgroundTint="@color/gold"
        app:backgroundTint="@color/gold"
        android:text="@string/bookingservice"
        android:textSize="@dimen/textsize_10sp"
        android:textAllCaps="false"
        android:layout_alignParentLeft="true">

    </com.google.android.material.button.MaterialButton>
</RelativeLayout>